# topo-lang-rust

./: .gitignore  CMakeLists.txt  README.md  SYN_PARSER_BOUNDARY.md  vcpkg.json
runtime/: Cargo.toml  build.rs
runtime-macros/: Cargo.toml
runtime-macros/src/: lib.rs
runtime-macros/tests/: pipeline_macro.rs
runtime-macros/tests/cases/: fail_non_empty_body.rs  fail_non_empty_body.stderr  fail_unknown_attr.rs  fail_unknown_attr.stderr  pass_basic.rs  pass_empty_parens.rs  pass_generic.rs  pass_void.rs
runtime/src/: adaptive.rs  app.rs  arena.rs  check.rs  config.rs  config_model.rs  emit.rs  graph.rs  jit.rs  lib.rs  observe.rs  parallel.rs  pipeline.rs  readback.rs  schema.rs  toolchain.rs
runtime/tests/: config_browse.rs  config_inline_internal.rs  config_model.rs  config_rw.rs  config_tags_perm.rs  topo_app_vertical_slice.rs
runtime/tests/common/: mod.rs
test/: CMakeLists.txt
test/e2e/: RustCompletenessTest.cpp  RustContainmentTest.cpp  RustPurityTest.cpp  RustStageIsolationTest.cpp  RustVisibilityTest.cpp  TestMain.cpp
test/fixtures/check/completeness_fail/: Cargo.toml  Topo.toml
test/fixtures/check/completeness_pass/: Cargo.toml  Topo.toml
test/fixtures/check/containment_command/: Cargo.toml  Topo.toml
test/fixtures/check/containment_external_ok/: Cargo.toml  Topo.toml
test/fixtures/check/containment_fail/: Cargo.toml  Topo.toml
test/fixtures/check/containment_ffi/: Cargo.toml  Topo.toml
test/fixtures/check/containment_file/: Cargo.toml  Topo.toml
test/fixtures/check/containment_network/: Cargo.toml  Topo.toml
test/fixtures/check/containment_raw_pointer/: Cargo.toml  Topo.toml
test/fixtures/check/containment_rust_arc_get_mut_unchecked/: README.md  Topo.toml
test/fixtures/check/containment_rust_box_from_raw/: README.md  Topo.toml
test/fixtures/check/containment_rust_safe_box/: README.md  Topo.toml
test/fixtures/check/containment_rust_safe_ptr_use/: README.md  Topo.toml
test/fixtures/check/containment_rust_slice_from_raw_parts/: README.md  Topo.toml
test/fixtures/check/containment_rust_transmute_copy/: README.md  Topo.toml
test/fixtures/check/containment_rust_unsafe_impl_send/: README.md  Topo.toml
test/fixtures/check/containment_rust_unsafe_trait_decl/: README.md  Topo.toml
test/fixtures/check/containment_rust_zeroed_typed/: README.md  Topo.toml
test/fixtures/check/containment_safe_code/: Cargo.toml  Topo.toml
test/fixtures/check/containment_static_mut/: Cargo.toml  Topo.toml
test/fixtures/check/containment_unsafe_block/: Cargo.toml  Topo.toml
test/fixtures/check/purity_rust_fail_01/: Topo.toml
test/fixtures/check/purity_rust_fail_02/: Topo.toml
test/fixtures/check/purity_rust_fail_03/: Topo.toml
test/fixtures/check/purity_rust_fail_04/: Topo.toml
test/fixtures/check/purity_rust_pass_01/: Topo.toml
test/fixtures/check/purity_rust_pass_02/: Topo.toml
test/fixtures/check/purity_rust_pass_03/: Topo.toml
test/fixtures/check/purity_rust_pass_04/: Topo.toml
test/fixtures/check/stage_isolation_rust_fail_01/: Topo.toml
test/fixtures/check/stage_isolation_rust_fail_02/: Topo.toml
test/fixtures/check/stage_isolation_rust_fail_03/: Topo.toml
test/fixtures/check/stage_isolation_rust_fail_04/: Topo.toml
test/fixtures/check/stage_isolation_rust_pass_01/: Topo.toml
test/fixtures/check/stage_isolation_rust_pass_02/: Topo.toml
test/fixtures/check/stage_isolation_rust_pass_03/: Topo.toml
test/fixtures/check/stage_isolation_rust_pass_04/: Topo.toml
test/fixtures/check/visibility_rust_fail_01/: Topo.toml
test/fixtures/check/visibility_rust_fail_02/: Topo.toml
test/fixtures/check/visibility_rust_fail_03/: Topo.toml
test/fixtures/check/visibility_rust_fail_04/: Topo.toml
test/fixtures/check/visibility_rust_pass_01/: Topo.toml
test/fixtures/check/visibility_rust_pass_02/: Topo.toml
test/fixtures/check/visibility_rust_pass_03/: Topo.toml
test/fixtures/check/visibility_rust_pass_04/: Topo.toml
test/fixtures/extractor_fidelity/01_basic_fn/: expected.json  request.json
test/fixtures/extractor_fidelity/02_trait_impl/: expected.json  input.rs  request.json
test/fixtures/extractor_fidelity/03_generic_fn/: expected.json  input.rs  request.json
test/fixtures/extractor_fidelity/04_use_path/: expected.json  input.rs  request.json
test/unit/: CMakeLists.txt  RustExtractorFidelityTest.cpp  RustStubGeneratorTest.cpp
topo-build/: CMakeLists.txt  RustDriver.cpp  RustDriver.h
topo-build/static-frontend/: Cargo.toml
topo-build/static-frontend/src/: analyze.rs  check.rs  emit.rs  graph.rs  lib.rs  main.rs  readback.rs
topo-build/static-frontend/tests/: vertical_slice.rs
topo-check/analysis/: CMakeLists.txt  RustAnalysisProvider.cpp  RustAnalysisProvider.h
topo-check/analysis/catalog/: RustSafePatterns.cpp  RustSafePatterns.h  RustSafePatterns.toml  RustSafetyAnalyzer.cpp  RustSafetyAnalyzer.h  RustUnsafeCatalog.cpp  RustUnsafeCatalog.h
topo-check/analysis/extract/: RustCallEdgeExtractor.cpp  RustCallEdgeExtractor.h  RustCallSiteExtractor.cpp  RustCallSiteExtractor.h  RustImportExtractor.cpp  RustImportExtractor.h  RustLSPCallSiteExtractor.cpp  RustLSPCallSiteExtractor.h  RustLSPImportExtractor.cpp  RustLSPImportExtractor.h  RustLSPSymbolExtractor.cpp  RustLSPSymbolExtractor.h  RustLSPUtils.h  RustSymbolAccessExtractor.cpp  RustSymbolAccessExtractor.h  RustSymbolExtractor.cpp  RustSymbolExtractor.h
topo-check/analysis/stub/: RustStubGenerator.cpp  RustStubGenerator.h
topo-check/extractor/: Cargo.toml
topo-check/extractor/src/: main.rs  safety.rs
topo-check/extractor/tests/: integration.rs
topo-check/runner/: CMakeLists.txt  RustCheckRunner.cpp  RustCheckRunner.h
topo-init/: CMakeLists.txt  RustInitTemplateProvider.cpp  RustInitTemplateProvider.h  RustLldbFormatterAsset.cpp.in
topo-lang/: CMakeLists.txt  RustPlugin.cpp  RustPlugin.h
topo-lsp/: CMakeLists.txt  RustAnalyzerBridge.cpp  RustAnalyzerBridge.h
topo-profile/: CMakeLists.txt
topo-profile/test/: CMakeLists.txt
topo-profile/test/fixtures/: spans_demo.rs
topo-transpile/: CMakeLists.txt  RustEmitter.cpp  RustEmitter.h
(+170 files in other folders)
