[package]
name = "topo-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for the Topo runtime — #[topo_pipeline]"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
topo = { path = "../runtime" }
