[package]
name = "topo-extract-rust"
version = "0.1.0"
edition = "2021"

# `syn` is also used by topo-lang-rust/topo-build/static-frontend/. The
# two crates deliberately keep separate visitors / type-resolution
# helpers — see ../../SYN_PARSER_BOUNDARY.md for the rationale and the
# revisit triggers.
[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1"
quote = "1"
